SPL tests