@@ -1,6 +1,5 @@
 plugins {
     id "io.github.qishr.cascara-meta.java-library" version "0.1.0"
-    id "io.github.qishr.cascara-meta.publish" version "0.1.0"
 }
 
 
@@ -17,19 +16,30 @@ repositories {
 
 dependencies {
     implementation(platform("io.github.qishr:cascara-meta-bom:$cascara_version"))
-
-    // testImplementation("org.junit.jupiter:junit-jupiter-api")
     implementation("org.junit.jupiter:junit-jupiter-api")
-
     implementation("org.junit.jupiter:junit-jupiter-engine")
-    // testImplementation 'org.mockito:mockito-core'
-    // testImplementation 'org.mockito:mockito-junit-jupiter'
     implementation('org.junit.platform:junit-platform-launcher')
-
+    implementation('io.github.qishr:cascara-test-common-junit')
     implementation(project(':cascara-common'))
 }
 
 
 tasks.withType(Javadoc).configureEach {
     options.addStringOption('Xdoclint:-missing', '-quiet')
+}
+
+
+test {
+    useJUnitPlatform()
+    // Ensure Gradle passes dependencies via --module-path for JPMS modules
+    // modularity.inferModulePath = true
+    // modularity.inferModulePath = false
+
+    // project.logger.lifecycle("MP: $buildDir/modulepath")
+
+    jvmArgs = [
+        // '--module-path', classpath.asPath,
+        '--module-path', "$buildDir/modulepath",
+        '--add-modules', 'ALL-MODULE-PATH'
+    ]
 }
